--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "build:css": "tailwindcss -i src/input.css -o dist/output.css --minify",
+    "watch:css": "tailwindcss -i src/input.css -o dist/output.css --watch",
     "lint": "ng lint"
   },
   "private": true,
@@ -27,7 +29,9 @@
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/status-bar": "7.0.1",
     "@ionic/angular": "^8.0.0",
+    "date-fns": "^4.1.0",
     "ionicons": "^7.0.0",
+    "maplibre-gl": "^5.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -44,9 +48,12 @@
     "@angular/language-service": "^19.0.0",
     "@capacitor/cli": "7.2.0",
     "@ionic/angular-toolkit": "^12.0.0",
+    "@tailwindcss/postcss": "^4.1.5",
     "@types/jasmine": "~5.1.0",
+    "@types/maplibre-gl": "^1.14.0",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.16.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsdoc": "^48.2.1",
@@ -58,6 +65,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.5",
     "typescript": "~5.6.3"
   },
   "description": "An Ionic project"
