--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
-    "@capacitor/app": "7.0.1",
+    "@capacitor/android": "^7.2.0",
+    "@capacitor/app": "^7.0.1",
+    "@capacitor/browser": "^7.0.1",
     "@capacitor/core": "7.2.0",
     "@capacitor/haptics": "7.0.1",
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/status-bar": "7.0.1",
-    "@ionic/angular": "^8.0.0",
+    "@ionic/angular": "^8.5.6",
     "date-fns": "^4.1.0",
     "ionicons": "^7.0.0",
     "maplibre-gl": "^5.4.0",
@@ -48,6 +50,7 @@
     "@angular/language-service": "^19.0.0",
     "@capacitor/cli": "7.2.0",
     "@ionic/angular-toolkit": "^12.0.0",
+    "@stencil/core": "^4.30.0",
     "@tailwindcss/postcss": "^4.1.5",
     "@types/jasmine": "~5.1.0",
     "@types/maplibre-gl": "^1.14.0",
